# respondedorbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sparkleshare  AGENTS.md  CLAUDE.md  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  app.js  benchmark_bot.py  bot_config.example.json  docker-compose.yml  index.js  index.py  main.js  main.py  now.json  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  run_maintenance.py  run_polling.py  server.js  test.py  test_main.py  vercel.json  wrangler.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codacy.yml  codeql-analysis.yml  docker-publish.yml  docker.yml  podman.yml  tests.yml
api/: __init__.py  admin_commands.py  admin_reporting.py  admin_service.py  agent_loop.py  agent_tools.py  ai_billing.py  ai_pipeline.py  ai_pricing.py  ai_request_runtime.py  ai_service.py  ai_usage_billing.py  application.py  bcra_formatters.py  billing_callbacks.py  billing_commands.py  billing_service.py  bot_ptb.py  cache_service.py  cached_http.py  callback_runtime.py  chat_config_defaults.py  chat_config_service.py  chat_context.py  chat_settings.py  command_registry.py  config.py  config_runtime.py  constants.py  credit_units.py  crypto_commands.py  dollar_commands.py  dollar_runtime.py  feature_catalog.py  general_commands.py  giphy_commands.py  groq_billing.py  image_processing.py  index.py  link_commands.py  (+32 more)
api/admin/: __init__.py  commands.py  reporting.py  service.py
api/agent/: __init__.py  memory.py
api/ai/: __init__.py  pipeline.py  pricing.py  prompt_context.py  request_runtime.py  service.py  system_prompt.py
api/billing/: __init__.py  ai.py  callbacks.py  commands.py  credit_units.py  service.py
api/bot/: __init__.py  callbacks.py  chat_config_defaults.py  chat_config_service.py  chat_context.py  chat_settings.py  command_registry.py  feature_catalog.py  giphy.py  message_content.py  message_handler.py  message_links.py  ptb.py  responses.py  routing.py  telegram.py  telegram_commands.py  types.py
api/cache/: __init__.py  http.py  service.py
api/core/: __init__.py  config.py  config_runtime.py
api/links/: __init__.py  agent_tools.py  commands.py  context.py  service.py
api/markets/: __init__.py  context.py  crypto.py  dollar.py  hacker_news.py  models.py  polymarket.py  price.py  stocks.py  token_signals.py  weather.py  world_cup_goals.py
api/media/: __init__.py  cache.py  commands.py  runtime.py  utils.py
api/memory/: __init__.py  compaction.py  state.py  summary.py
api/providers/: __init__.py  backoff.py  base.py  config.py  errors.py  groq.py  openrouter.py  runtime.py  service.py  support.py  types.py
api/services/: __init__.py  bcra.py  chat_config_db.py  credits_db.py  http_client.py  maintenance.py  redis_helpers.py  stale_cache.py  tcrm.py
api/storage/: __init__.py  chat_config_repository.py
api/tasks/: __init__.py  executor.py  models.py  scheduler.py
api/tools/: __init__.py  calculate.py  crypto_prices.py  dollar_lookup.py  get_chat_members.py  price_lookup.py  registry.py  reminder_list.py  reminder_scheduler.py  reminder_set.py  runtime.py  scheduled_task_cancel.py  scheduled_task_list.py  scheduled_task_set.py  stock_prices.py  task_cancel.py  task_list.py  task_scheduler.py  task_set.py  web_fetch.py
api/utils/: __init__.py  bounded_http.py  caching.py  formatting.py  http.py  links.py  text.py  youtube_transcript.py
bot/: index.js
quadlets/: respondedorbot-redis.container  respondedorbot.container
rust/: Cargo.toml
rust/src/: ai.rs  chat_config.rs  config.rs  hacker_news.rs  http_cache.rs  lib.rs  links.rs  main.rs  market.rs  message_utils.rs  models.rs  polymarket.rs  weather.rs
rust/src/agent/: mod.rs
rust/src/bcra/: mod.rs
rust/src/commands/: mod.rs
rust/src/telegram/: mod.rs
rust/src/tools/: mod.rs
rust/tests/: ai.rs  basic.rs  market.rs  message_utils.rs  tools.rs
src/: ai.rs  cache.rs  chat_config.rs  hacker_news.rs  http.rs  http_cache.rs  lib.rs  links.rs  main.rs  market.rs  media.rs  polymarket.rs  redis_store.rs  storage.rs  weather.rs  webhook.rs  worker.rs
src/agent/: mod.rs
src/bcra/: mod.rs
src/commands/: mod.rs
src/telegram/: mod.rs
src/tools/: mod.rs
systemd/: respondedorbot-maintenance.service  respondedorbot-maintenance.timer  respondedorbot-podman-prune.service  respondedorbot-podman-prune.timer
tests/: agent.rs  ai.rs  basic.rs  chat_config.rs  conftest.py  links.rs  market.rs  message_handler_support.py  message_utils.rs  provider_pipeline_support.py  support.py  test_admin_reporting.py  test_agent_loop.py  test_agent_memory.py  test_agent_tools.py  test_ai_billing_internal.py  test_ai_pipeline.py  test_ai_requests.py  test_ai_service.py  test_bcra.py  test_bcra_itcrm_series.py  test_bot_ptb.py  test_chat_config_service.py  test_chat_context_internal.py  test_chat_settings.py  test_command_registry_internal.py  test_command_routing.py  test_config.py  test_credits_db.py  test_crypto_selection.py  test_entrypoint.py  test_feature_catalog.py  test_http_client.py  test_link_pipeline.py  test_links.py  test_logging_config.py  test_maintenance_internal.py  test_market_commands.py  test_market_context.py  test_market_formatting.py  (+43 more)
workspace/: AGENTS.md  RULES.md  SOUL.md
