[package]
name = "respondedorbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["server"]
server = []
worker = []

[[bin]]
name = "respondedorbot"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
http = "1.1"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "1.0", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
tracing = "0.1"
calamine = "0.32"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
md5 = "0.8"
urlencoding = "2.1"
unicode-normalization = "0.1"
html-escape = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
axum-server = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
worker = { version = "0.7.2", features = ["http"] }
