[package]
name = "respondedorbot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["worker"]
worker = []

[dependencies]
http = "1.1"
serde_urlencoded = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5.8"
tracing = "0.1"
futures = "0.3"
calamine = "0.32"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
hex = "0.4"
md5 = "0.8"
urlencoding = "2.1"
unicode-normalization = "0.1"
html-escape = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.7.2", features = ["http"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
