[project]
name = "respondedorbot"
version = "0.1.0"
description = "AI-powered Telegram bot with market data, chat memory, and scheduled tasks"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "apscheduler>=3.11.2,<4.0",
    "emoji>=2.15.0",
    "groq>=1.2.0",
    "mutagen>=1.47.0",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pycountry>=26.2.16",
    "pykakasi>=2.3.0",
    "python-telegram-bot>=22.7,<23.0",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "types-openpyxl>=3.1.5.20260518",
    "types-requests>=2.33.0.20260518",
]

[tool.uv]
package = false
required-version = "==0.11.21"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "S",
    "RUF",
    "PLE",
    "PLW",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0915",
]
ignore = [
    "B023",
    "B905",
    "E501",
    "S101",
    "S106",
    "S110",
    "S112",
    "S307",
    "S314",
    "S311",
    "S501",
    "S603",
    "S607",
    "S608",
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    "UP047",
    "RUF001",
    "RUF005",
    "RUF012",
    "RUF013",
    "RUF022",
    "B007",
    "B011",
    "SIM102",
    "SIM103",
    "SIM105",
    "SIM108",
    "SIM114",
    "SIM117",
    "I001",
    "PLW0603",
]

[tool.ruff.lint.per-file-ignores]
"api/admin/commands.py" = ["PLR0911"]
"api/ai/pricing.py" = ["C901"]
"api/ai/service.py" = ["C901", "PLR0911"]
"api/billing/ai.py" = ["PLR0911"]
"api/billing/commands.py" = ["PLR0911"]
"api/bot/message_links.py" = ["C901"]
"api/cache/http.py" = ["C901"]
"api/index.py" = ["C901", "F401", "PLR0912"]
"api/links/context.py" = ["C901"]
"api/markets/bcra_formatters.py" = ["C901", "PLR0912"]
"api/markets/polymarket.py" = ["C901"]
"api/markets/token_signals.py" = ["C901", "PLR0911", "PLR0915"]
"api/media/commands.py" = ["C901", "PLR0911"]
"api/memory/state.py" = ["PLR0911"]
"api/providers/openrouter.py" = ["C901", "PLR0912"]
"api/services/bcra.py" = ["C901", "PLR0911", "PLR0912"]
"api/tasks/executor.py" = ["C901", "PLR0915"]
"api/tools/calculate.py" = ["PLR0911"]
"api/utils/links.py" = ["C901", "PLR0911"]
"api/utils/youtube_transcript.py" = ["C901", "PLR0911"]
"tests/**" = [
    "E712",
    "F403",
    "F405",
    "F841",
    "RUF059",
    "RUF100",
    "PLW0108",
]
"tests/test_message_routing.py" = ["PLR0915"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = false
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.jobstores.redis",
    "apscheduler.schedulers.background",
]
ignore_missing_imports = true
