[package]
name = "respondedorbot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.26", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
calamine = "0.25"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
md5 = "0.7"
urlencoding = "2.1"
unicode-normalization = "0.1"
html-escape = "0.2"
